Narrower autocue to avoid horizontal scrolling

--- a/app/assets/stylesheets/rglossa/speech/media.scss
+++ b/app/assets/stylesheets/rglossa/speech/media.scss
@@ -25,7 +25,7 @@
   position:absolute;
   top:5px;
   left: 500px;
-  width: 65%;
+  width: 40%;
   background-color: #fff;
   border-style:solid;
   border-width:1px;
